--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.5.9",
-        "guzzlehttp/guzzle": "^6.2"
+        "php": ">=7.2.0",
+        "guzzlehttp/guzzle": "7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
@@ -31,7 +31,10 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "SeBuDesign\\BuckarooJson\\Tests\\": "tests/"
+            "SeBuDesign\\BuckarooJson\\Tests\\": "tests/",
+            "SeBuDesign\\BuckarooJson\\Tests\\Integration\\": "tests/integration",
+            "SeBuDesign\\BuckarooJson\\Tests\\Unit\\Helpers\\": "tests/unit/helpers",
+            "SeBuDesign\\BuckarooJson\\Tests\\Unit\\Transaction\\": "tests/unit/transaction"
         }
     }
 }
