--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.2.0",
-        "guzzlehttp/guzzle": "7.0"
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
